--- a/en/meta.yml
+++ b/en/meta.yml
@@ -7,7 +7,7 @@ copyedit: false
 last_tested: "2021-03-26"
 steps:
   - title: Introduction
-  - ttle: Choosing your wand
+  - title: Choosing your wand
   - title: The shrinking spell
   - title: The growing spell
   - title: Toad transformation
