--- a/en/meta.yml
+++ b/en/meta.yml
@@ -1,4 +1,4 @@
-title: Broadcasting spells
+title: "Broadcasting spells: Use messages to communicate between sprites"
 hero_image: images/banner.png
 description: Use a magic wand to choose spells and broadcast spell messages to turn sprites into toads and grow and shrink them.
 version: 4
