--- a/en/meta.yml
+++ b/en/meta.yml
@@ -1,4 +1,4 @@
-title: "Broadcasting spells"
+title: "Broadcast spells"
 hero_image: images/banner.png
 description: Use a magic wand to choose spells and broadcast spell messages to turn sprites into toads and grow and shrink them.
 version: 4
@@ -7,9 +7,9 @@ copyedit: false
 last_tested: "2021-03-26"
 steps:
   - title: Introduction
-  - title: Choosing your wand
-  - title: The shrinking spell
-  - title: The growing spell
+  - title: Choose your wand
+  - title: The shrink spell
+  - title: The grow spell
   - title: Toad transformation
   - title: Add another character
   - title: Reflection
