--- a/en/meta.yml
+++ b/en/meta.yml
@@ -9,14 +9,17 @@ steps:
   - title: Introduction
   - title: Choose your wand
   - title: The shrink spell
+    completion: engaged
   - title: The grow spell
   - title: Toad transformation
   - title: Add another character
+    completion: internal
   - title: Reflection
     knowledge_quiz:
       path: quiz1
       version: 1
       questions: 3
       passing_score: 3
+    completion: external
   - title: Upgrade your project
   - title: What next?
