--- a/kn-IN/meta.yml
+++ b/kn-IN/meta.yml
@@ -1,26 +1,31 @@
 ---
-title: "ಮಂತ್ರಗಳನ್ನು ಪ್ರಸಾರಮಾಡುವುದು"
+title: ಮಂತ್ರಗಳನ್ನು ಪ್ರಸಾರಮಾಡುವುದು
 hero_image: images/banner.png
-description: ಮಂತ್ರಗಳನ್ನು ಆಯ್ಕೆ ಮಾಡಲು ಮಾಂತ್ರಿಕ ದಂಡವನ್ನು ಉಪಯೋಗಿಸಿ ಮತ್ತು ಸ್ಪ್ರೈಟ್‌ಗಳನ್ನು ನೆಲಗಪ್ಪೆಗಳಾಗಿ ಬದಲಾಯಿಸಲು ಮತ್ತು ಅವುಗಳನ್ನು ಬೆಳೆಸಲು ಹಾಗೂ ಕುಗ್ಗಿಸಲು ಮಂತ್ರದ ಸಂದೇಶಗಳನ್ನು ಪ್ರಸಾರ ಮಾಡುವುದು.
+description: ಮಂತ್ರಗಳನ್ನು ಆಯ್ಕೆ ಮಾಡಲು ಮಾಂತ್ರಿಕ ದಂಡವನ್ನು ಉಪಯೋಗಿಸಿ ಮತ್ತು ಸ್ಪ್ರೈಟ್‌ಗಳನ್ನು
+  ನೆಲಗಪ್ಪೆಗಳಾಗಿ ಬದಲಾಯಿಸಲು ಮತ್ತು ಅವುಗಳನ್ನು ಬೆಳೆಸಲು ಹಾಗೂ ಕುಗ್ಗಿಸಲು ಮಂತ್ರದ ಸಂದೇಶಗಳನ್ನು
+  ಪ್ರಸಾರ ಮಾಡುವುದು.
 version: 4
 listed: true
 copyedit: false
-last_tested: "2021-03-26"
+last_tested: '2021-03-26'
 steps:
-  - title: ಪರಿಚಯ
-  - title: ನಿಮ್ಮ ಮಾಂತ್ರಿಕ ದಂಡವನ್ನು ಆಯ್ಕೆ ಮಾಡಿಕೊಳ್ಳಿ
-  - title: ಕುಗ್ಗಿಸುವ ಮಂತ್ರ
-    completion: engaged
-  - title: ಬೆಳೆಸುವ ಮಂತ್ರ
-  - title: ನೆಲಗಪ್ಪೆಯ ರೂಪಾಂತರ
-  - title: ಇನ್ನೊಂದು ಪಾತ್ರವನ್ನು ಸೇರಿಸಿ
-    completion: internal
-  - title: ಪುನರ್ಮನನ
-    completion: external
-    knowledge_quiz:
-      path: quiz1
-      version: 1
-      questions: 3
-      passing_score: 3
-  - title: ನಿಮ್ಮ ಪ್ರಾಜೆಕ್ಟ್‌ ಅಪ್‌ಗ್ರೇಡ್‌ ಮಾಡಿ
-  - title: ಮುಂದೆ ಏನು?
+- title: ಪರಿಚಯ
+- title: ನಿಮ್ಮ ಮಾಂತ್ರಿಕ ದಂಡವನ್ನು ಆಯ್ಕೆ ಮಾಡಿಕೊಳ್ಳಿ
+- title: ಕುಗ್ಗಿಸುವ ಮಂತ್ರ
+  completion:
+  - engaged
+- title: ಬೆಳೆಸುವ ಮಂತ್ರ
+- title: ನೆಲಗಪ್ಪೆಯ ರೂಪಾಂತರ
+- title: ಇನ್ನೊಂದು ಪಾತ್ರವನ್ನು ಸೇರಿಸಿ
+  completion:
+  - internal
+- title: ಪುನರ್ಮನನ
+  knowledge_quiz:
+    path: quiz1
+    version: 1
+    questions: 3
+    passing_score: 3
+  completion:
+  - external
+- title: ನಿಮ್ಮ ಪ್ರಾಜೆಕ್ಟ್‌ ಅಪ್‌ಗ್ರೇಡ್‌ ಮಾಡಿ
+- title: ಮುಂದೆ ಏನು?
