--- a/en/meta.yml
+++ b/en/meta.yml
@@ -1,30 +1,31 @@
 ---
 title: Broadcasting spells
 hero_image: images/banner.png
-description: Use a magic wand to choose spells and broadcast spell messages to turn
+description:
+  Use a magic wand to choose spells and broadcast spell messages to turn
   sprites into toads and grow and shrink them.
 version: 4
 listed: true
 copyedit: false
-last_tested: '2021-03-26'
+last_tested: "2021-03-26"
 steps:
-- title: Introduction
-- title: Choose your wand
-- title: The shrink spell
-  completion:
-  - engaged
-- title: The grow spell
-- title: Toad transformation
-- title: Add another character
-  completion:
-  - internal
-- title: Reflection
-  knowledge_quiz:
-    path: quiz1
-    version: 1
-    questions: 3
-    passing_score: 3
-  completion:
-  - external
-- title: Upgrade your project
-- title: What next?
+  - title: You will make
+  - title: Choose your wand
+  - title: The shrink spell
+    completion:
+      - engaged
+  - title: The grow spell
+  - title: Toad transformation
+  - title: Add another character
+    completion:
+      - internal
+  - title: Quick quiz
+    knowledge_quiz:
+      path: quiz1
+      version: 1
+      questions: 3
+      passing_score: 3
+    completion:
+      - external
+  - title: Upgrade your project
+  - title: What next?
