--- a/el-GR/meta.yml
+++ b/el-GR/meta.yml
@@ -4,6 +4,8 @@ hero_image: images/banner.png
 description: Χρησιμοποίησε ένα μαγικό ραβδί για να επιλέξεις ξόρκια και να μεταδώσεις
   μηνύματα με ξόρκια για να μετατρέψεις τα αντικείμενα σε βατράχους και να τα μεγαλώσεις
   και να τα συρρικνώσεις.
+meta_title: Έργα προγραμματισμού scratch για παιδιά και εφήβους | Ξόρκια Μετάδοσης
+meta_description: Learn Scratch with the Raspberry Pi Foundation's coding projects for kids and teens. Make a Scratch app and use a magic wand to turn sprites into toads.
 version: 4
 listed: true
 copyedit: false
