--- a/en/meta.yml
+++ b/en/meta.yml
@@ -29,5 +29,6 @@ steps:
       passing_score: 3
     completion:
       - external
-  - title: Upgrade your project
+  - title: Challenge
+    challenge: true
   - title: What next?
